# Klasifikasi-Varietas-Beras

./: .pdm-python  README.md  pyproject.toml
src/: app.py  klasifikasi_citra_Beras.py
src/Model/Model_InceptionV3/: model_layers.json  model_summary.txt
src/Model/Model_InceptionV3/Evaluation/Test/: classification_report.txt
src/Model/Model_InceptionV3/Evaluation/Validation/: classification_report.txt
src/Model/Model_MobileNetV2/: model_layers.json  model_summary.txt
src/Model/Model_MobileNetV2/Evaluation/Test/: classification_report.txt
src/Model/Model_MobileNetV2/Evaluation/Validation/: classification_report.txt
src/Model/Tabular/: iris_model.h5  scaler.pkl
